# spin-http-crud-rust

./: Cargo.toml  README.md  spin.toml
src/: lib.rs
