[package]
name = "spin-http-crud-rust"
authors = ["vamshireddy <vamshiproject02@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "2.2.0"
http = "1.0.0"
serde = "1.0.200"
serde_derive = "1.0.200"
serde_json = "1.0.116"

[workspace]
